	* Added several configuration variables to the Status plugin to
	determine how verbose the cpu command is.
	
	* Added a configuration variable to the Dunno plugin,
	supybot.plugins.Dunno.prefixNick, which determines whether the
	bot will prefix the nick of the user giving an invalid command to
	its "dunno" response.  Formerly, it never would; the default for
	this variable, however, is True, because that's how the rest of
	Supybot works.
	
	* Added Owner.rename, a command for renaming commands in other
	plugins.
	
	* Added a new plugin, Tail, which will tail logfiles and send the
	new lines to a configurable list of targets.
	
	* Added Config.channel, for getting/setting channel configuration
	variables.
	
	* Fixed the problem with channels with dots or colons in them
	raising exceptions whenever the registry was accessed.
	
	* Changed Fun.roulette to use a 6-barrel revolver.
	
	* Changed Bugzilla to use the registry, rather than a custom
	flatfile database format.
	
	* Added the KeepAlive plugin, to send useless keepalive messages
	to someone every some period.  It's mostly just because we
	noticed that MozBot had one, and we couldn't allow ourselves to
	be outdone.
	
	* Changed the URL plugin to use flatfiles rather than SQLite
	database.  Also reduced the functionality of the last command by
	removing some options that no one ever really used, and removed
	the random command (who uses that anyway?)
	
	* Changed the Words plugin not to use SQLite.  We lose the
	anagram command, but crossword and hangman become much easier to
	use, since all the user has to do is put a words file in
	data/words.
	
	* Changed the Relay plugin to rely only on the registry, allowing
	it to start and join all networks and channels with no user/owner
	interaction at all.  Also, removed the Relay.say and
	Relay.reconnect commands, since both can be accomplished easily
	using the Relay.command command in combination with
	Owner.reconnect and Anonymous.say commands.
	